tests/rt/neg/ifc/pini_full_insuff_auth.trp
let val a_ = attenuate (authority, `<alice;#root-integrity>`)
    val c = pinipushto (a_ , `<alice;#root-integrity>`) 
    val _ = if (true raisedTo `<alice & bob;#root-integrity>`) then () else ()   
    val _ = debugpc ()
    val _ = pinipop (c)
in debugpc ()
end